# freezer-specs

./: .gitignore  .gitreview  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst  redirect.py
doc/source/specs/2025.1/: index.rst
doc/source/specs/ocata/: index.rst
doc/source/specs/pike/: index.rst
doc/source/specs/stein/: index.rst
priorities/: newton-priorities.rst  ocata-priorities.rst  pike-priorities.rst  stein-priorities.rst
specs/: 2025.1-template.rst  backlog-template.rst  newton-template.rst  ocata-template.rst  pike-template.rst
specs/2025.1/approved/: centralized-scheduler.rst
specs/ocata/approved/: block_based_backup_support.rst  cinder_os_brick.rst  relational_db_schema_with_oslo_db.rst
specs/pike/approved/: block_based_backup_support.rst  cinder_os_brick.rst  freezer-puppet-manifests.rst  relational_db_schema_with_oslo_db.rst  s3_driver_support.rst
specs/stein/approved/: add-ftp-support-for-freezer.rst  add-mysql-support-for-freezer.rst
specs/train/: placeholder.rst
tests/: test_titles.py
