[metadata]
name = freezer-specs
summary = OpenStack Freezer Project Development Specs
description_file =
    README.rst
license = Apache-2.0
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://specs.openstack.org/openstack/freezer-specs/
classifier =
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
